<resources>
    <string name="app_name">Komunity Store</string>
    <string name="language">en</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="hello_world">Hello world!</string>
    <string name="back_to_close">Press again to quit</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="followers">Followers</string>
    <string name="subscribers">Subscribers</string>
    <string name="likes">likes</string>
    <string name="follow">Follow</string>
    <string name="followed">Followed</string>
    <string name="deals">Deals</string>
    <string name="map">Map</string>
    <string name="search">Search</string>
    <string name="list">List</string>
    <string name="profile">Profile</string>
    <string name="my_profile">My Profile</string>
    <string name="delete_deal_confirmation">Are you sure you want to delete this deal ?</string>
    <string name="cant_locate">Couldn\'t locate you</string>
    <string name="address">Address</string>
    <string name="my_position">My position</string>
    <string name="find_an_address">Find an address</string>
    <string name="no_connection_title">Connection Error</string>
    <string name="no_connection_message">Please connect to a working Internet connection and try again</string>
    <string name="no_deal">No deal was found.\n\nFind users to follow using the search function or try the map to see the deals near you !</string>
    <string name="choose_a_picture">Add picture</string>
    <string name="from_galery">Choose from Gallery</string>
    <string name="from_photo">Take a picture</string>
    <string name="error_full">An error has occured.\nPlease try again later</string>
    <string name="error_title">An error has occured</string>
    <string name="error_message">Please try again later</string>
    <string name="loading_title">Loading</string>
    <string name="loading_message">Please wait</string>
    <string name="success">Done</string>
    <string name="fail_location_title">Couldn\'t locate you</string>
    <string name="fail_location_message">Please make sure you turned your GPS ON or you are connected</string>
    <string name="posted_by">Posted By :</string>
    <string name="post_a_deal">Post a Deal</string>
    <string name="search_content">Title / Content</string>
    <string name="search_price">Price</string>
    <string name="search_deal">Deal</string>
    <string name="search_user">User</string>
    <string name="search_no_params">You must complete at least one field</string>
    <string name="deal_title">Title *</string>
    <string name="deal_content">Content *</string>
    <string name="deal_currency">Currency *</string>
    <string name="deal_type">Type *</string>
    <string name="deal_price">Price *</string>
    <string name="deal_promo_code">Promo Code *</string>
    <string name="deal_reduc">Reduction *</string>
    <string name="deal_address">Address</string>
    <string name="empty">Empty</string>
    <string name="fill_info_title">Some infos are missing</string>
    <string name="fill_info_message">Please fill all the fields marked with a *</string>
    <string name="deal_send_success_title">Deal successfully send</string>
    <string name="user_image_successfully_change">User image successfully send</string>
    <string name="post">Post</string>
    <string name="take_photo">Choose a picture</string>
    <string name="bon_plan">Good deal</string>
    <string name="code_promo">Promo Code</string>
    <string name="reduction">Reduction</string>
    <string name="map_no_gps_title">GPS disabled</string>
    <string name="map_no_gps_message">Do you want to enable it for better accuracy ?</string>
    <string name="logout">Logout ?</string>
</resources>
