<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/post">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/red"
                    android:orientation="vertical"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center"
                        android:paddingTop="20dp"
                        android:text="@string/deal_title"
                        android:textColor="@android:color/white"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/deal_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/edittext_background"
                        android:padding="5dp"
                        android:textColor="@android:color/white"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center"
                        android:paddingTop="10dp"
                        android:text="@string/deal_content"
                        android:textColor="@android:color/white"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/deal_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/edittext_background"
                        android:padding="5dp"
                        android:textColor="@android:color/white"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <com.komunitystore.view.KSCheckBox
                        android:id="@+id/deal_type_bon_plan"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <com.komunitystore.view.KSCheckBox
                        android:id="@+id/deal_type_promo"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <com.komunitystore.view.KSCheckBox
                        android:id="@+id/deal_type_reduction"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/bon_plan_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="left|center"
                        android:text="@string/deal_price"
                        android:textColor="@android:color/black"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal"
                        android:weightSum="4">

                        <EditText
                            android:id="@+id/deal_prix"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/background_button_border_red"
                            android:inputType="numberDecimal"
                            android:padding="10dp"
                            android:singleLine="true"
                            android:textColor="@android:color/black" />


                        <RadioGroup
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="3"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:paddingLeft="20dp"
                            android:paddingRight="10dp"
                            android:weightSum="2">

                            <RadioButton
                                android:id="@+id/deal_currency_euros"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:text="€" />

                            <RadioButton
                                android:id="@+id/deal_currency_dollars"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="$" />


                        </RadioGroup>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/code_promo_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="left|center"
                        android:text="@string/deal_promo_code"
                        android:textColor="@android:color/black"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/code_promo_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_weight="2"
                        android:background="@drawable/background_button_border_red"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:textColor="@android:color/black" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/reduc_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="left|center"
                        android:text="@string/deal_reduc"
                        android:textColor="@android:color/black"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal"
                        android:weightSum="4">

                        <EditText
                            android:id="@+id/reduc_value"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/background_button_border_red"
                            android:padding="10dp"
                            android:singleLine="true"
                            android:textColor="@android:color/black" />

                        <RadioGroup
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="3"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:paddingLeft="20dp"
                            android:paddingRight="10dp"
                            android:weightSum="3">

                            <RadioButton
                                android:id="@+id/deal_reduc_euros"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:text="€" />

                            <RadioButton
                                android:id="@+id/deal_reduc_dollar"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="$" />

                            <RadioButton
                                android:id="@+id/deal_reduc_percent"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="%" />


                        </RadioGroup>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/find_address"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:background="@drawable/background_button_blue"
                        android:padding="10dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/pin"
                        android:tint="@android:color/white" />

                    <TextView
                        android:id="@+id/address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="left|center"
                        android:padding="10dp"
                        android:textColor="@android:color/black" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/take_photo"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:background="@drawable/background_button_blue"
                        android:padding="10dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/image"
                        android:tint="@android:color/white" />

                    <ImageView
                        android:id="@+id/deal_photo"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:layout_gravity="center"
                        android:layout_margin="30dp"
                        android:scaleType="centerCrop"
                        android:visibility="gone" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/white_fondu_bottom" />

    </RelativeLayout>

    <Button
        android:id="@+id/post"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:background="@drawable/background_button_red"
        android:text="@string/post"
        android:textColor="@android:color/white" />

</RelativeLayout>